# xmp-android

./: .editorconfig  .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: app-build-release.yml
.run/: xmp-android [kotlinterCheck].run.xml  xmp-android [kotlinterFormat].run.xml  xmp-android [ktlintFormat].run.xml  xmp-android [updateLintBaseline].run.xml  xmp-android [wrapper --gradle-version 8.8].run.xml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  CMakeLists.txt  XmpEngine.cpp  XmpEngine.h  audio.h  opensl.c  xmp-jni.c  xmp-jni.cpp
app/src/main/res/anim/: slide_in_left.xml  slide_in_left_slow.xml  slide_in_right.xml  slide_in_right_slow.xml  slide_out_left.xml  slide_out_left_slow.xml  slide_out_right.xml  slide_out_right_slow.xml
app/src/main/res/layout/: about.xml  changelog.xml  error_message.xml  format_list_item.xml  list_formats.xml  modlist.xml  newlist.xml  player.xml  player_main.xml  player_sidebar.xml  playlist.xml  playlist_card.xml  playlist_item.xml  playlist_item_drag.xml  playlist_menu.xml  result_list.xml  result_module.xml  search.xml  search_error.xml  search_list_item.xml  sequence_item.xml  song_item.xml
app/src/main/res/menu/: options_menu.xml  player_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  attrs.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
doc/: Material3README.txt
gradle/: libs.versions.toml
(+249 files in other folders)
